playbooks/inara/files/rules.v4
# Generated by iptables-save v1.6.0 on Thu Jun 21 15:34:58 2018
*nat
:PREROUTING ACCEPT [1915:211567]
:INPUT ACCEPT [1207:165358]
:OUTPUT ACCEPT [1425:88616]
:POSTROUTING ACCEPT [1425:88616]
-A POSTROUTING -o wlan0 -j MASQUERADE
COMMIT
# Completed on Thu Jun 21 15:34:58 2018
# Generated by iptables-save v1.6.0 on Thu Jun 21 15:34:58 2018
*filter
:INPUT ACCEPT [25449:3629499]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [29200:16925633]
#signalk
-A INPUT -s 131.212.0.0/16 -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 192.168.88.0/24 -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 131.212.0.0/16 -i eth0 -p tcp -m tcp --dport 3000 -j ACCEPT
-A INPUT -s 192.168.88.0/24 -i eth0 -p tcp -m tcp --dport 3000 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 3000 -j DROP
#ssh
-A INPUT -s 131.212.0.0/16 -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.88.0/24 -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j DROP
#vnc
-A INPUT -s 131.212.0.0/16 -i eth0 -p tcp -m tcp --dport 5900 -j ACCEPT
-A INPUT -s 192.168.88.0/24 -i eth0 -p tcp -m tcp --dport 5900 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 5900 -j DROP

:f2b-sshd - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A FORWARD -i wlan0 -o wlan1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan1 -o wlan0 -j ACCEPT
-A f2b-sshd -j RETURN
COMMIT
# Completed on Thu Jun 21 15:34:58 2018
